# chickenham

./: .gitignore  README.md  coinbase.py  coinbase_utils.py  combine.py  config.py  input_shares.py  main.py  pyproject.toml  requirements.txt  share.py
.github/workflows/: python-app.yml
chickenham/: bitcoin_utils.py  cli.py  coinbase_utils.py  config.py  connectivity.py  input_shares.py  main.py  requirements.txt  share.py  workflow_utils.py
tests/: manual_test_coinbase_utils.py  test_cli.py  test_coinbase_utils.py
